fix(flipbook): remove useWasm property which breaks older versions of pdfjs

--- a/src/components/flipbook/flipbook.astro
+++ b/src/components/flipbook/flipbook.astro
@@ -93,7 +93,7 @@ async function setupFlipbook() {
 
     async function startFlipbook() {
       if (!flipbookViewport) return;
-      const loadTask = getDocument({url: flipbook.dataset.flipbook, useWasm: true});
+      const loadTask = getDocument({url: flipbook.dataset.flipbook});
       loadTask.onProgress = (progress: OnProgressParameters) => {
         flipbookProgress?.setAttribute("style", `--progress:${(progress.loaded / progress.total).toFixed(2)};`);
       };
