--- a/src/components/form/form.astro
+++ b/src/components/form/form.astro
@@ -1,9 +1,9 @@
 ---
 import { bookshopName } from "@mws-astro/util";
-import Section from "@layouts/Section.astro";
+import { default as Section, type Props as SectionProps } from "@layouts/Section.astro";
 import Required from "./required.astro";
 
-export interface Props {
+export interface Props extends Partial<SectionProps> {
   action: string;
   name: string;
   form_blocks: any[];
