--- a/src/components/navigation/navigation.astro
+++ b/src/components/navigation/navigation.astro
@@ -1,10 +1,10 @@
 ---
-import Section from "@layouts/Section.astro";
+import { default as Section, type Props as SectionProps } from "@layouts/Section.astro";
 import { getTreeNode } from "@mws-astro/util";
 import type { TreeNode } from "@mws-astro/middleware";
 import Icon from "@shared/icon.astro";
 
-interface Props {
+interface Props extends Partial<SectionProps> {
     tree?: TreeNode;
     collection?: string;
     maxDepth?: number;
@@ -24,7 +24,6 @@ const {
     hide_cousins = false,
     icon = "",
 } = Astro.props;
-
 
 let tree = Astro.props.tree ?? undefined;
 // @ts-ignore
