--- a/src/shared/astro/Footer.astro
+++ b/src/shared/astro/Footer.astro
@@ -3,6 +3,7 @@ import { convertColorString } from "@mws-astro/util";
 import Social from "@components/social/social.astro";
 import Markdown from "@shared/Markdown.astro";
 import Navigation from "@components/navigation/navigation.astro";
+import Icon from "./icon.astro";
 import preferences from "@data/preferences.json";
 const currentYear = new Date().getFullYear();
 
@@ -18,7 +19,7 @@ const Override = (await Object.values(import.meta.glob("/src/components/**/Foote
       style={`--background-color: ${footerPreferences?.background_color};` +
           `--text-color: ${textColor};`}
   >
-      {footerPreferences?.show_top_button && <a href="#top">Back to top</a>}
+      {footerPreferences?.show_top_button && <a href="#top" title="Back to top"><Icon name="fa6-solid:chevron-up" height="2em" /></a>}
       {
           footerPreferences?.text_content && (
               <div class="content">
@@ -28,7 +29,7 @@ const Override = (await Object.values(import.meta.glob("/src/components/**/Foote
       }
       {
           footerPreferences?.show_sitemap && (
-              <Navigation collection="pages" filter="/" parent={false} />
+              <Navigation collection="pages" filter="/" parent={false} maxDepth={2} key="footer" indent="no-indent"/>
           )
       }
       {footerPreferences?.show_socials && <Social />}
@@ -55,6 +56,7 @@ const Override = (await Object.values(import.meta.glob("/src/components/**/Foote
 
 <style>
     section.footer {
+        position: relative;
         display: grid;
         gap: 2rem;
         background-color: var(--background-color);
@@ -72,20 +74,29 @@ const Override = (await Object.values(import.meta.glob("/src/components/**/Foote
 
     .brand {
         margin: 0;
-        grid-column: 2 / 3;
+        /* grid-column: 2 / 3; */
         text-align: right;
         opacity: 0.5;
     }
 
-    
+    a[href="#top"] {
+        position: absolute;
+        top: -3em;
+        right: calc(var(--indent) * .25);
+        background-color: rgb(var(--color-accent));
+        padding: 2em;
+        border-radius: 9999px;
 
-    
-</style>
+    }
 
-<style is:global lang="scss">
-    html.mobile-nav section.footer {
-        grid-template-rows: auto auto;
-        grid-template-columns: auto;
-        padding-bottom: 100px; /* Create space for mobile navigation button */
+    @media only screen and (max-width: 768px) {
+        section.footer {
+            /* grid-template-rows: auto; */
+            /* grid-template-columns: 1fr; */
+            /* grid-auto-flow: row; */
+            grid-template-rows: 1fr;
+            grid-template-columns: 1fr;
+            padding-bottom: 100px; /* Create space for mobile navigation button */
+        }
     }
 </style>
