--- a/src/components/social/social.astro
+++ b/src/components/social/social.astro
@@ -59,7 +59,7 @@ const socials: Record<string, string>[] = socialItems.map(
     .social {
         color: var(--text-color);
         display: flex;
-        justify-content: flex-end;
+        justify-content: var(--align, flex-end);
         flex-wrap: nowrap;
         row-gap: 0.5rem;
 
@@ -77,23 +77,23 @@ const socials: Record<string, string>[] = socialItems.map(
         }
 
         &.left {
-            justify-content: flex-start;
+            --align: flex-start;
         }
 
         &.center {
-            justify-content: center;
+            --align: center;
         }
 
         &.right {
-            justify-content: flex-end;
+            --align: flex-end;
         }
 
         &.space-between {
-            justify-content: space-between;
+            --align: space-between;
         }
 
         &.space-evenly {
-            justify-content: space-evenly;
+            --align: space-evenly;
         }
     }
 
@@ -172,7 +172,7 @@ const socials: Record<string, string>[] = socialItems.map(
         margin-left: calc(50% - 9.5em);
         margin-right: calc(50% - 9.5em);
     }
-    
+
     nav#navigation.mobile-nav .social {
         justify-content: center;
     }
