--- a/src/shared/astro/Footer.astro
+++ b/src/shared/astro/Footer.astro
@@ -19,7 +19,7 @@ const Override = (await Object.values(import.meta.glob("/src/components/**/Foote
       style={`--background-color: ${footerPreferences?.background_color};` +
           `--text-color: ${textColor};`}
   >
-      {footerPreferences?.show_top_button && <a href="#top" title="Back to top"><Icon name="fa6-solid:chevron-up" height="2em" /></a>}
+      {footerPreferences?.show_top_button && <a href="#top" title="Back to top"><Icon name="fa6-solid:chevron-up" height="2rem" /></a>}
       {
           footerPreferences?.text_content && (
               <div class="content">
@@ -63,6 +63,10 @@ const Override = (await Object.values(import.meta.glob("/src/components/**/Foote
         grid-template-rows: auto;
         grid-template-columns: auto auto;
         color: rgb(var(--text-color));
+
+        &:has(> a[href="#top"]) {
+            padding-top: max(calc(var(--indent) * var(--vertical-indent)), 4rem);
+        }
     }
 
     .copyright {
@@ -81,12 +85,11 @@ const Override = (await Object.values(import.meta.glob("/src/components/**/Foote
 
     a[href="#top"] {
         position: absolute;
-        top: -3em;
+        top: -3rem;
         right: calc(var(--indent) * .25);
         background-color: rgb(var(--color-accent));
-        padding: 2em;
+        padding: 2rem;
         border-radius: 9999px;
-
     }
 
     @media only screen and (max-width: 768px) {
@@ -94,8 +97,26 @@ const Override = (await Object.values(import.meta.glob("/src/components/**/Foote
             /* grid-template-rows: auto; */
             /* grid-template-columns: 1fr; */
             /* grid-auto-flow: row; */
-            grid-template-rows: 1fr;
-            grid-template-columns: 1fr;
+            /* grid-template-rows: 1fr; */
+            /* grid-template-columns: 1fr; */
+
+            * {
+                grid-column: 1 / 3 ;
+                grid-row: unset;
+            }
+
+            .copyright {
+                grid-column: 1 / 2;
+            }
+
+            .brand {
+                grid-column: 2 / 3;
+            }
+
+            .social {
+                --align: center;
+            }
+
             padding-bottom: 100px; /* Create space for mobile navigation button */
         }
     }
